$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-18 (opened April 21, 2009)

	* orditkplot: copes with missing or NaN scores (omits them).

	* ordixyplot: failed in constrained ordination (cca, rda,
	capscale). Was broken in rev108 on Nov 7, 2007(!). The biplot was
	rotated 90 degrees: it seems that lattice calls x y and y x. 

	* ordixyplot & ordisplom: Gained a new type = "arrows" that is a
	Lattice version of ordiarrows.

	* RsquareAdj: defined as generic function. The old RsquareAdj is
	now the "default" method, and there are specific methods for
	"rda", "cca" (= NA), "lm" and "glm" objects. Not yet documented,
	but functions are listed as aliases in varpart.Rd. On Pierre
	Legendre's request.
	
Version 1.16-17 (closed April 15, 2009)

	* closed concurrently with the release of vegan 1.15-2.

	* spantree.Rd: example plots use type = "t" to demonstrate the use
	of ordilabel(). 

	* nestedtemp: docs tell that Carsten Dormann's bipartite package
	has a direct port of BINMATNEST programme of Rodriquez-Girones &
	Santamaria. 

	* anosim: uses much less memory allowing analysis of larger
	problems (number of rows, number of iterations). The change
	concerns only internal data structures, and the permutation
	results should be identical with old and new code when the same
	random number seed is used. The Rd file got an example of using
	'strata' in permutations.

	* meandist: a new sister function for mrpp. Function meandist
	calculates a matrix of mean within and between group
	dissimilarities. Its summary function returns the overall averages
	of those distances, and all three variants of MRPP A statistic,
	and classification strength. The plot method draws a dendrogram
	based on the mean dissimilarity matrix, with leaves hanging to
	within-group dissimilarity.

	* betadisper: Fix bug corrects the way distance to centroid is
	computed when only one group is present in the data. betadisper 